# rust-bootstrap

./: package-lock.json  package.json  vite.config.ts
.bluekit/blueprints/react-tauri-rust-app-v2/: backend-foundation.md  blueprint.json  file-watching.md  frontend-foundation.md  ipc-system.md  project-setup.md  ui-components.md
improvements/: improvements-backend-foundation.md  improvements-file-watching.md  improvements-frontend-foundation.md  improvements-ipc-system.md  improvements-project-setup.md  improvements-ui-components.md
src/: App.tsx  ipc.ts  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  utils.rs  watcher.rs
src/components/: Header.tsx  NavigationDrawer.tsx  ProjectDetailsModal.tsx  WelcomeScreen.tsx
src/components/agents/: AgentsTabContent.tsx
src/components/blueprints/: BlueprintsTabContent.tsx
src/components/diagrams/: DiagramsTabContent.tsx
src/components/kits/: KitsTabContent.tsx
src/components/scrapbook/: ScrapbookTabContent.tsx
src/components/ui/: toaster.tsx
src/components/walkthroughs/: WalkthroughsTabContent.tsx
src/components/workstation/: KitMarkdownViewer.tsx  MermaidDiagramViewer.tsx  Workstation.tsx
src/contexts/: ColorModeContext.tsx  FeatureFlagsContext.tsx  SelectionContext.tsx  WorkstationContext.tsx
src/hooks/: useFileWatcher.ts
src/pages/: DiagramViewPage.tsx  HomePage.tsx  KitViewPage.tsx  ProjectDetailPage.tsx  WalkthroughViewPage.tsx
src/utils/: fileWatcher.ts  parseFrontMatter.ts
