[package]
name = "rust-bootstrap"
version = "0.1.0"
description = "A Tauri + React + TypeScript desktop application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "rust_bootstrap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-open", "fs-read-dir", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

